{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 144,
  "lineage": "75c37bd9-ff7e-42af-c272-811bd2be025f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dns_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026c3177c9bd54288",
            "arn": "arn:aws:ec2:eu-central-1:851725638950:instance/i-03e3f14076a4ba28d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e3f14076a4ba28d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "proxy_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e90f8da02a37a40",
            "private_dns": "ip-10-0-1-173.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "public_ip": "3.67.64.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-022d62f7ff7b78962",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a540f334078f97e",
            "tags": {
              "Name": "proxy-project-dns-server"
            },
            "tags_all": {
              "Name": "proxy-project-dns-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0825a4c62a51db676"
            ]
          },
          "dependencies": [
            "aws_key_pair.proxy_auth",
            "aws_security_group.proxy_project_public_sg",
            "aws_subnet.proxy_project_public_subnet",
            "aws_vpc.proxy_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026c3177c9bd54288",
            "arn": "arn:aws:ec2:eu-central-1:851725638950:instance/i-0b527058d98fc6b38",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b527058d98fc6b38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "proxy_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b6b70ad17f6bcc8d",
            "private_dns": "ip-10-0-1-189.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_ip": "3.79.111.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0579138f0c352daf6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a540f334078f97e",
            "tags": {
              "Name": "proxy-project-proxy-server"
            },
            "tags_all": {
              "Name": "proxy-project-proxy-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0825a4c62a51db676"
            ]
          },
          "dependencies": [
            "aws_key_pair.proxy_auth",
            "aws_security_group.proxy_project_public_sg",
            "aws_subnet.proxy_project_public_subnet",
            "aws_vpc.proxy_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proxy_project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725638950:internet-gateway/igw-07fb21b981bdb3273",
            "id": "igw-07fb21b981bdb3273",
            "owner_id": "851725638950",
            "tags": {
              "Name": "proxy-project-igw"
            },
            "tags_all": {
              "Name": "proxy-project-igw"
            },
            "vpc_id": "vpc-0c08d1dd1027350c2"
          },
          "dependencies": [
            "aws_vpc.proxy_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "proxy_project_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725638950:route-table/rtb-0a6a9e05c428fbc20",
            "id": "rtb-0a6a9e05c428fbc20",
            "owner_id": "851725638950",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fb21b981bdb3273",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proxy-project-public-route-table"
            },
            "tags_all": {
              "Name": "proxy-project-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c08d1dd1027350c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.proxy_project_igw",
            "aws_vpc.proxy_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a0eef08ef1451d",
            "route_table_id": "rtb-0a6a9e05c428fbc20",
            "subnet_id": "subnet-06a540f334078f97e"
          },
          "dependencies": [
            "aws_internet_gateway.proxy_project_igw",
            "aws_route_table.proxy_project_public_rt",
            "aws_subnet.proxy_project_public_subnet",
            "aws_vpc.proxy_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy_project_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725638950:security-group/sg-0825a4c62a51db676",
            "description": "proxy-project security group for public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0825a4c62a51db676",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "proxy-project-public-sg",
            "name_prefix": "",
            "owner_id": "851725638950",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proxy-project-public-sg"
            },
            "tags_all": {
              "Name": "proxy-project-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c08d1dd1027350c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proxy_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "proxy_project_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725638950:subnet/subnet-06a540f334078f97e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a540f334078f97e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725638950",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proxy-project-public-subnet"
            },
            "tags_all": {
              "Name": "proxy-project-public-subnet"
            },
            "vpc_id": "vpc-0c08d1dd1027350c2"
          },
          "dependencies": [
            "aws_vpc.proxy_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proxy_project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725638950:vpc/vpc-0c08d1dd1027350c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0545aa8682778198c",
            "default_route_table_id": "rtb-0b78517084547b002",
            "default_security_group_id": "sg-0b37affaf3d1d6dde",
            "dhcp_options_id": "dopt-08ff01bf893af03aa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c08d1dd1027350c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b78517084547b002",
            "owner_id": "851725638950",
            "tags": {
              "Name": "proxy-project-vpc"
            },
            "tags_all": {
              "Name": "proxy-project-vpc"
            }
          }
        }
      ]
    }
  ]
}